[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
xml-rs = "0.8"
rusqlite = "0.23"
postgres = "0.17"
redis = "0.16"
time = "0.1"
